# loadsmith-lab

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.agents/: AGENTS.md  README.md
.agents/skills/: create-source-image.md
.claude/commands/: create-source-image.md
crates/loadsmith-lab-cli/: Cargo.toml
crates/loadsmith-lab-cli/src/: main.rs
crates/loadsmith-lab-docker/: Cargo.toml
crates/loadsmith-lab-docker/src/: client.rs  lib.rs
crates/loadsmith-lab-report/: Cargo.toml
crates/loadsmith-lab-report/src/: lib.rs  report.rs
crates/loadsmith-lab-runner/: Cargo.toml
crates/loadsmith-lab-runner/src/: bundle.rs  case.rs  image.rs  lib.rs  origin.rs  runner.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: docker-model.md  overview.md  run-modes.md
docs/src/canonical-data/: overview.md  schema.md
docs/src/getting-started/: prerequisites.md  running-a-case.md  understanding-output.md
docs/src/reference/: bundle-yaml-schema.md  case-yaml-schema.md  cli.md
docs/src/writing-bundles/: bundle-yaml.md
docs/src/writing-cases/: adding-service-images.md  case-yaml.md  pipeline-yaml.md
