[workspace]
members = [
    "crates/loadsmith-lab-cli",
    "crates/loadsmith-lab-runner",
    "crates/loadsmith-lab-docker",
    "crates/loadsmith-lab-report",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
serde_yaml     = "0.9"
serde_json     = "1"
clap           = { version = "4", features = ["derive"] }
bollard        = "0.17"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored        = "2"
scopeguard     = "1"
uuid           = { version = "1", features = ["v4"] }
futures-util   = "0.3"
tar            = "0.4"
tokio-postgres = "0.7"
toml           = "0.8"
dirs           = "5"
