[workspace]
members = [
    "crates/loadsmith-lab-cli",
    "crates/loadsmith-lab-runner",
    "crates/loadsmith-lab-docker",
    "crates/loadsmith-lab-report",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
serde_yaml     = "0.9"
serde_json     = "1"
clap           = { version = "4", features = ["derive"] }
bollard        = "0.17"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored        = "2"
scopeguard     = "1"
uuid           = { version = "1", features = ["v4"] }
futures-util   = "0.3"
tar            = "0.4"
tokio-postgres = "0.7"
toml           = "0.8"
dirs           = "5"
# Pure-Rust Oracle driver for the oracle readiness probe. Pinned to our patched
# fork (one-line tokio-rustls fix) so the lab build stays free of aws-lc-sys /
# cmake, exactly like the engine + plugins. See [patch.crates-io] below.
oracle-rs      = "0.1.7"

# oracle-rs 0.1.7 pulls tokio-rustls with default features, which drag in
# aws-lc-sys (native C + cmake). Our fork disables those default features (the
# crypto provider is installed by the app instead). Drop this patch once the fix
# is released upstream — tracked as a standing tech-debt item in the connector
# work; the same patch is mirrored in loadsmith-canonical-plugins.
[patch.crates-io]
oracle-rs = { git = "https://github.com/loadsmith-el/oracle-rs", rev = "87f0adbd8dbd4869b76fb6261a659c7d4f65211a" }
