[package]
name    = "loadsmith-lab-docker"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio        = { workspace = true }
anyhow       = { workspace = true }
bollard      = { workspace = true }
futures-util = { workspace = true }
tracing      = { workspace = true }
tar          = { workspace = true }
bytes = "1"
