[package]
name    = "loadsmith-lab-runner"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
scopeguard = { workspace = true }
uuid       = { workspace = true }
tar        = { workspace = true }
tokio-postgres = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
loadsmith-lab-docker = { path = "../loadsmith-lab-docker" }
loadsmith-lab-report = { path = "../loadsmith-lab-report" }
